[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = [
    "David Maldonado <dmaldonado@ugr.es>",
    "Antonio Cantudo <cantu@stlarx.com>",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "./entity" }

# egui -- Windowing and GUI
eframe = "0.19.0"
egui_extras = "0.19.0"
image = "0.24.2"

# Logging
log = "0.4.17"
env_logger = "0.9.0"

# Other
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3"
dotenv = "0.15.0"
chrono = "0.4.22"
libloading = "0.7"

# Config file
confy = { version = "0.5.0", default-features = false, features = [
    "yaml_conf",
] }

# Web
actix-web = "4"
actix-cors = "0.6.2"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-actix-native-tls",
    "macros",
] }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
