[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

[dependencies.sea-orm]

version = "^0"

features = [

  "macros",

  "debug-print",

  "runtime-tokio-native-tls",

  "sqlx-sqlite",

  "with-chrono",

  "with-time",

  "with-json"

]

default-features = false

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]
